* all scripts - introduce new argument 'git=[BRANCHname]';
* ALIAS extension and correction
* pa_tag-edit | introduce new "actions=replace-with-object:TAGname" in combination with 'filter=(name eq OLDtagName)'
* UTIL develop - introduce interface_getIP
* UTIL all rule classes - improvements for PHP8.1
* UTIL | disable logging

BUGFIX:
* update installer scripts / issues with git-php not availalbe
* update dockerfiles to support git-php
* Dockerfiles - extend with git and set git global
* UTIL pa_address-edit actions=decommission | bugfix not possible to remove object from dynamic address-group
* UTIL | improve service any usage to 0-65535 from any / dynamic improvements from 1024-65535 to 1025-65535

GENERAL:
* update Readme and Install file / bring in information for PAN-OS-PHP on Windows WSLv2 installation


2.0.26 (20211209)
UTILS:
* UTIL pan-os-php type=$utiltype is the only supported UTIL script for the future, all other UTIL script are set to deprecated
* UTIL pan-os-php UI - move to local file usage
* UTIL all script - introduce new argument "shadow-nojson"
* UTIL UI - improvement to get filter correctly working for operators like ">,<,=,!"
* UTIL UI - starting on extended version
* UTIL UI - extend to delete additional actions/filter column
* UTIL develop - add multiple script in specific for downloading PAN-OS software
* UTIL develop | introduce API creation testing script for different objects
* UTIL develop | introduce reset-config and software-remove script
* UTIL develop | software-downloader.php improve exception support
* UTIL introduce new ALIAS: pa_license / pa_software-preparation / pa_software-downloader / pa_config-commit / pa_config-reset / pa_get_system-user-info / pa_software-remove / pa_system-log / pa_traffic-log

BUGFIX:
* UTIL pan-os-php API - bugfix in relation to shadow-json and previous code reduction